[gd_scene format=3 uid="uid://k7ashoi3hvik"]

[ext_resource type="Script" uid="uid://ckmjmx4qmpruv" path="res://scripts/doberman.gd" id="1_aiqim"]
[ext_resource type="Texture2D" uid="uid://dy7wm7r8je502" path="res://images/Design/Animation/enemy_dog/Free Street Animal Pixel Art/1 Dog/Idle.png" id="1_fi34j"]
[ext_resource type="Texture2D" uid="uid://c73qkrq1lgey" path="res://images/Design/Animation/enemy_dog/Free Street Animal Pixel Art/1 Dog/Walk.png" id="2_f8hj4"]
[ext_resource type="Texture2D" uid="uid://d4k3sgf00diy" path="res://images/Design/Animation/enemy_dog/Free Street Animal Pixel Art/1 Dog/Attack.png" id="2_vpy1p"]
[ext_resource type="Texture2D" uid="uid://c48ntc4cpb6l1" path="res://images/Design/Animation/enemy_dog/Free Street Animal Pixel Art/1 Dog/Death.png" id="3_v21xd"]
[ext_resource type="Texture2D" uid="uid://c8my48v01xt0r" path="res://images/Design/Animation/enemy_dog/Free Street Animal Pixel Art/1 Dog/Hurt.png" id="4_rqym5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqym5"]
size = Vector2(30, 31)

[sub_resource type="Animation" id="Animation_f8hj4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_fi34j")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rqym5"]
resource_name = "doberman_attack"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_vpy1p")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.26666668),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.16666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_attack_timer_timeout"
}]
}

[sub_resource type="Animation" id="Animation_aiqim"]
resource_name = "doberman_death"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_v21xd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_tb1cg"]
resource_name = "doberman_hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_rqym5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.099999994),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_vpy1p"]
resource_name = "doberman_idle"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_fi34j")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.3, 0.46666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_v21xd"]
resource_name = "doberman_walk"
length = 0.4685
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_f8hj4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v21xd"]
_data = {
&"RESET": SubResource("Animation_f8hj4"),
&"doberman_attack": SubResource("Animation_rqym5"),
&"doberman_death": SubResource("Animation_aiqim"),
&"doberman_hurt": SubResource("Animation_tb1cg"),
&"doberman_idle": SubResource("Animation_vpy1p"),
&"doberman_walk": SubResource("Animation_v21xd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aiqim"]
size = Vector2(568, 304)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tb1cg"]
size = Vector2(192, 32)

[node name="doberman" type="CharacterBody2D" unique_id=1155563102 groups=["Enemy"]]
collision_layer = 2
script = ExtResource("1_aiqim")

[node name="Sprite" type="Sprite2D" parent="." unique_id=2124026314]
unique_name_in_owner = true
position = Vector2(5, -9)
texture = ExtResource("1_fi34j")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1610585120]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_rqym5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=879262793]
unique_name_in_owner = true
root_node = NodePath("../CollisionShape2D")
libraries/ = SubResource("AnimationLibrary_v21xd")
autoplay = &"doberman_idle"

[node name="Dog_detection_area" type="Area2D" parent="." unique_id=1866968784]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dog_detection_area" unique_id=577273674]
shape = SubResource("RectangleShape2D_aiqim")
debug_color = Color(0.32156864, 0.8039216, 0, 0.2901961)

[node name="Attack_area" type="Area2D" parent="." unique_id=503183787]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_area" unique_id=1545023173]
shape = SubResource("RectangleShape2D_tb1cg")
debug_color = Color(0.9831055, 0, 0.36039197, 0.41960785)

[node name="Attack_timer" type="Timer" parent="." unique_id=926676621]
wait_time = 2.0

[connection signal="body_entered" from="Dog_detection_area" to="." method="_on_dog_detection_area_body_entered"]
[connection signal="body_exited" from="Dog_detection_area" to="." method="_on_dog_detection_area_body_exited"]
[connection signal="body_entered" from="Attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="Attack_timer" to="." method="_on_attack_timer_timeout"]
